docs/pages/versions/v57.0.0/sdk/ui/drop-in-replacements/bottomsheet.mdx
---
title: BottomSheet
description: A bottom sheet compatible with @gorhom/bottom-sheet.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { YesIcon, NoIcon } from '~/ui/components/DocIcons';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { PlatformSpotlight, PlatformTabsGroup } from '~/ui/components/PlatformTabs';

A `BottomSheet` component with an API compatible with `@gorhom/bottom-sheet`. It wraps the platform-specific `@expo/ui` primitives: [Jetpack Compose ModalBottomSheet](../jetpack-compose/bottomsheet) on Android and [SwiftUI BottomSheet](../swift-ui/bottomsheet) on iOS. On web, it uses a [vaul](https://github.com/emilkowalski/vaul) drawer.

If you need lower-level control over platform-specific styling, modifiers, or layout behavior, use the native primitives directly.

<PlatformTabsGroup>

<PlatformSpotlight
  android={{
    src: '/static/images/expo-ui/community-bottomsheet/android-light.webp',
    darkSrc: '/static/images/expo-ui/community-bottomsheet/android-dark.webp',
    alt: 'A bottom sheet presented over a dimmed screen',
  }}
  ios={{
    src: '/static/images/expo-ui/community-bottomsheet/ios-light.webp',
    darkSrc: '/static/images/expo-ui/community-bottomsheet/ios-dark.webp',
    alt: 'A bottom sheet presented over a dimmed screen',
  }}
/>

## Installation

<APIInstallSection />

## Migrating from `@gorhom/bottom-sheet`

- Update imports from:

  ```tsx
  import BottomSheet, { BottomSheetView } from '@gorhom/bottom-sheet';
  ```

  To use `@expo/ui/community/bottom-sheet`:

  ```tsx
  import BottomSheet, { BottomSheetView } from '@expo/ui/community/bottom-sheet';
  ```

- `GestureHandlerRootView` from `react-native-gesture-handler` is not required by this implementation. You can leave it in place if other parts of your app need it.
- Component and hook exports such as `BottomSheetBackdrop`, `BottomSheetHandle`, `BottomSheetFooter`, `BottomSheetDraggableView`, `BottomSheetVirtualizedList`, `BottomSheetFlashList`, `useBottomSheetModal`, `useBottomSheetSpringConfigs`, and `useBottomSheetTimingConfigs` are not supported. Some related prop types are exported for API compatibility.

## Basic usage

<ComponentExample
  title="BottomSheetExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-bottomsheet-basic-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-bottomsheet-basic-android-dark.webp',
    alt: 'A sheet at its smallest snap point below an Open button',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-bottomsheet-basic-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-bottomsheet-basic-ios-dark.webp',
    alt: 'A sheet at its smallest snap point below an Open button',
  }}>

```tsx
import { useRef } from 'react';
import { Button, Text, useColorScheme, View } from 'react-native';
import BottomSheet, { BottomSheetView } from '@expo/ui/community/bottom-sheet';

export default function BottomSheetExample() {
  const colorScheme = useColorScheme();
  const ink = { color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' };
  const sheetRef = useRef<BottomSheet>(null);

  return (
    <View style={{ flex: 1 }}>
      <Button title="Open" onPress={() => sheetRef.current?.snapToIndex(0)} />

      <BottomSheet
        ref={sheetRef}
        snapPoints={['25%', '50%', '90%']}
        index={-1}
        onChange={index => {
          console.log('onChange', index);
        }}
        onClose={() => {
          console.log('closed');
        }}
        enablePanDownToClose>
        <BottomSheetView style={{ flex: 1, padding: 24, alignItems: 'center' }}>
          <Text style={ink}>Sheet content</Text>
        </BottomSheetView>
      </BottomSheet>
    </View>
  );
}
```

</ComponentExample>

## `BottomSheetModal`

Use `BottomSheetModal` when migrating from `@gorhom/bottom-sheet` modal APIs. It starts closed and opens with `present()`.

<ComponentExample
  title="BottomSheetModalExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-bottomsheet-modal-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-bottomsheet-modal-android-dark.webp',
    alt: 'A half-height modal sheet with Modal content and a Dismiss button',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-bottomsheet-modal-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-bottomsheet-modal-ios-dark.webp',
    alt: 'A half-height modal sheet with Modal content and a Dismiss button',
  }}>

```tsx
import { useRef } from 'react';
import { Button, Text, useColorScheme, View } from 'react-native';
import { BottomSheetModal, BottomSheetView } from '@expo/ui/community/bottom-sheet';

export default function BottomSheetModalExample() {
  const colorScheme = useColorScheme();
  const ink = { color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' };
  const modalRef = useRef<BottomSheetModal>(null);

  return (
    <View style={{ flex: 1 }}>
      <Button title="Present" onPress={() => modalRef.current?.present()} />

      <BottomSheetModal ref={modalRef} snapPoints={['50%', '90%']} enablePanDownToClose>
        <BottomSheetView style={{ padding: 24 }}>
          <Text style={ink}>Modal content</Text>
          <Button title="Dismiss" onPress={() => modalRef.current?.dismiss()} />
        </BottomSheetView>
      </BottomSheetModal>
    </View>
  );
}
```

</ComponentExample>

## Dynamic sizing

When `snapPoints` is not provided, the sheet sizes to fit its content by default. Use `BottomSheetView` for the sheet content wrapper.

<ComponentExample
  title="DynamicBottomSheetExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-bottomsheet-dynamic-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-bottomsheet-dynamic-android-dark.webp',
    alt: 'A sheet sized to one line of content',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-bottomsheet-dynamic-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-bottomsheet-dynamic-ios-dark.webp',
    alt: 'A sheet sized to one line of content',
  }}>

```tsx
import { useRef } from 'react';
import { Button, Text, useColorScheme, View } from 'react-native';
import BottomSheet, { BottomSheetView } from '@expo/ui/community/bottom-sheet';

export default function DynamicBottomSheetExample() {
  const colorScheme = useColorScheme();
  const ink = { color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' };
  const sheetRef = useRef<BottomSheet>(null);

  return (
    <View style={{ flex: 1 }}>
      <Button title="Open" onPress={() => sheetRef.current?.present()} />

      <BottomSheet ref={sheetRef} index={-1} enablePanDownToClose>
        <BottomSheetView style={{ padding: 24 }}>
          <Text style={ink}>This sheet sizes itself to its content.</Text>
        </BottomSheetView>
      </BottomSheet>
    </View>
  );
}
```

</ComponentExample>

## Platform behavior

`@gorhom/bottom-sheet` renders inline at the bottom of its parent view. This component uses native modal presentation on Android and iOS, and a drawer overlay on web.

This difference is intentional. `@gorhom/bottom-sheet` owns the gesture and animation layer through `react-native-gesture-handler` and `react-native-reanimated`, while `@expo/ui/community/bottom-sheet` delegates those behaviors to Jetpack Compose, SwiftUI, and the web drawer primitive. As a result, this component is best suited for modal bottom sheet flows, including callsites that use the `BottomSheet` API rather than `BottomSheetModal`.

| Feature                | Android                                        | iOS                               | Web                           |
| ---------------------- | ---------------------------------------------- | --------------------------------- | ----------------------------- |
| Presentation           | Jetpack Compose modal bottom sheet             | SwiftUI sheet                     | vaul drawer                   |
| Snap points            | Maps to partial and expanded states            | Supports provided snap points     | Supports provided snap points |
| No `snapPoints`        | Fits content                                   | Fits content                      | Fits content                  |
| Pan down to close      | Also enables back button and scrim tap dismiss | Also enables backdrop tap dismiss | Enables drawer dismiss        |
| Persistent inline peek | Not supported                                  | Not supported                     | Not supported                 |

## Supported exports

| Export                     | Supported   | Notes                                                     |
| -------------------------- | ----------- | --------------------------------------------------------- |
| `BottomSheet`              | <YesIcon /> | Modal on Android and iOS, drawer on web                   |
| `BottomSheetModal`         | <YesIcon /> | Starts closed and opens with `present()`                  |
| `BottomSheetModalProvider` | <YesIcon /> | Renders children directly for compatibility               |
| `BottomSheetView`          | <YesIcon /> | Wraps sheet content                                       |
| `BottomSheetScrollView`    | <YesIcon /> | Re-export of React Native `ScrollView`                    |
| `BottomSheetFlatList`      | <YesIcon /> | Re-export of React Native `FlatList`                      |
| `BottomSheetSectionList`   | <YesIcon /> | Re-export of React Native `SectionList`                   |
| `BottomSheetTextInput`     | <YesIcon /> | Re-export of React Native `TextInput`                     |
| `useBottomSheet`           | <YesIcon /> | Returns the sheet ref methods from context                |
| `BottomSheetBackdrop`      | <NoIcon />  | The native sheet or web drawer handles the backdrop       |
| `BottomSheetHandle`        | <NoIcon />  | The native sheet or web drawer handles the drag indicator |
| `BottomSheetFooter`        | <NoIcon />  | No equivalent in this implementation                      |

## Compatibility notes

- `snapPoints`, `index`, `onChange`, `onClose`, `onDismiss`, `enablePanDownToClose`, and `enableDynamicSizing` are supported.
- `handleComponent={null}` hides the native or web drag indicator. Custom handle components are not rendered on native platforms.
- `backgroundStyle` applies fully on web. On Android, `backgroundColor` is used for the native container color. On iOS, the system sheet background is used.
- Animation, over-drag, content panning, handle panning, keyboard behavior, custom backdrop, custom background, custom footer, animated value, and detached props are accepted for API compatibility but do not change behavior.

## API

```tsx
import BottomSheet from '@expo/ui/community/bottom-sheet';
```

<APISection packageName="expo-ui/community/bottom-sheet" apiName="BottomSheet" />

</PlatformTabsGroup>
